<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/email"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="50dp" />

    <EditText
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username"
        android:autofillHints="@string/username"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/Password"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/Password"
        android:hint="@string/conf_pass"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/register"
        android:id="@+id/btn_reg"
        android:layout_gravity="center"
        android:paddingTop="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log in"
            android:id="@+id/txt_log"
            android:textColor="@color/link"/>

    </LinearLayout>

</LinearLayout>